Add support for managing multiple scene objects and Wavefront .obj file format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ add_executable(perspective-projection
     keyboard_controls.hpp keyboard_controls.cpp
     mouse_controls.hpp mouse_controls.cpp
     bsp_tree.hpp bsp_tree.cpp
+    object.hpp object.cpp
+    obj_file_parser.hpp obj_file_parser.cpp
+    scene.hpp scene.cpp
     main.cpp)
 target_link_libraries(perspective-projection PRIVATE 
     sfml-graphics 
